# profile-service

./: pyproject.toml
src/profile/application/dto/user/: input_dto.py  output_dto.py
src/profile/application/interactors/: interactor.py
src/profile/application/usecases/: user_usecases.py
src/profile/domain/common/: entities.py
src/profile/domain/user/: entity.py  repositories.py  value_objects.py
src/user_service/application/dto/user/: input_dto.py  output_dto.py
src/user_service/application/usecases/: user_usecases.py
src/user_service/domain/common/: entities.py  exceptions.py  value_objects.py
src/user_service/domain/user/: entity.py  repositories.py  value_objects.py
src/user_service/main/: main.py
